tests/error/errors_on_usage/for_type_change.py
from tests.util import compile_guppy


@compile_guppy
def foo(xs: list[int]) -> int:
    y = 5
    for x in xs:
        y = True
    return y
