tests/error/errors_on_usage/for_type_change.err
Error: Different types (at $FILE:9:11)
  | 
7 |     for x in xs:
8 |         y = True
9 |     return y
  |            ^ Variable `y` may refer to different types
  | 
6 |     y = 5
  |     - This is of type `int`
  | 
8 |         y = True
  |         - This is of type `bool`

Guppy compilation failed due to 1 previous error
